pixel art commit 3 fixed flex wrap

--- a/Tong/wk08/1-mon/pixel-art/style.css
+++ b/Tong/wk08/1-mon/pixel-art/style.css
@@ -1,8 +1,9 @@
+.canvas{
+    display: flex;
+    flex-wrap: wrap;
+}
 .square{
     width: 20px;
     height:20px;
     border:1px solid black;
-}
-.canvas{
-    display: flex;
 }
